--- a/index.html
+++ b/index.html
@@ -13,68 +13,97 @@
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <div class="logo">
-        <a href="">
-          <img src="https://placehold.co/100x100" alt="" />
+    <header class="header">
+      <div class="header__logo logo">
+        <a class="logo__link" href="">
+          <img
+            class="logo__image"
+            src="https://placehold.co/100x100"
+            alt="Logo"
+          />
         </a>
       </div>
-      <button class="js-toggle-menu">menu toggle</button>
-      <nav>
-        <ul>
-          <li>
-            <a href="">main 1</a>
-            <ul class="sub-menu">
-              <li><a href="">sub 1 1</a></li>
-              <li><a href="">sub 1 2</a></li>
-              <li><a href="">sub 1 3</a></li>
+
+      <button class="header__menu-toggle">menu toggle</button>
+
+      <nav class="header__nav nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="">main 1</a>
+            <ul class="nav__submenu">
+              <li class="nav__submenu-item">
+                <a class="nav__submenu-link" href="">sub 1 1</a>
+              </li>
+              <li class="nav__submenu-item">
+                <a class="nav__submenu-link" href="">sub 1 2</a>
+              </li>
+              <li class="nav__submenu-item">
+                <a class="nav__submenu-link" href="">sub 1 3</a>
+              </li>
             </ul>
           </li>
-          <li>
-            <a href="">main 2</a>
-            <ul class="sub-menu">
-              <li><a href="">sub 2 1</a></li>
-              <li><a href="">sub 2 2</a></li>
-              <li><a href="">sub 2 3</a></li>
+          <li class="nav__item">
+            <a class="nav__link" href="">main 2</a>
+            <ul class="nav__submenu">
+              <li class="nav__submenu-item">
+                <a class="nav__submenu-link" href="">sub 2 1</a>
+              </li>
+              <li class="nav__submenu-item">
+                <a class="nav__submenu-link" href="">sub 2 2</a>
+              </li>
+              <li class="nav__submenu-item">
+                <a class="nav__submenu-link" href="">sub 2 3</a>
+              </li>
             </ul>
           </li>
-          <li>
-            <a href="">main 3</a>
+          <li class="nav__item">
+            <a class="nav__link" href="">main 3</a>
           </li>
-          <li>
-            <a href="">main 4</a>
-            <ul class="sub-menu">
-              <li><a href="">sub 4 1</a></li>
-              <li><a href="">sub 4 2</a></li>
-              <li><a href="">sub 4 3</a></li>
-              <li><a href="">sub 4 4</a></li>
-              <li><a href="">sub 4 5</a></li>
+          <li class="nav__item">
+            <a class="nav__link" href="">main 4</a>
+            <ul class="nav__submenu">
+              <li class="nav__submenu-item">
+                <a class="nav__submenu-link" href="">sub 4 1</a>
+              </li>
+              <li class="nav__submenu-item">
+                <a class="nav__submenu-link" href="">sub 4 2</a>
+              </li>
+              <li class="nav__submenu-item">
+                <a class="nav__submenu-link" href="">sub 4 3</a>
+              </li>
+              <li class="nav__submenu-item">
+                <a class="nav__submenu-link" href="">sub 4 4</a>
+              </li>
+              <li class="nav__submenu-item">
+                <a class="nav__submenu-link" href="">sub 4 5</a>
+              </li>
             </ul>
           </li>
-          <li>
-            <a href="">main 5</a>
+          <li class="nav__item">
+            <a class="nav__link" href="">main 5</a>
           </li>
         </ul>
       </nav>
     </header>
+
     <main>
-      <div class="accordion-wrapper">
-        <div class="accordion-item">
-          <div class="title">
+      <div class="accordion">
+        <div class="accordion__item">
+          <div class="accordion__title">
             <h4>Lorem ipsum dolor sit amet.</h4>
           </div>
-          <div class="description">
+          <div class="accordion__description">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               Inventore non dolore amet iure explicabo sapiente?
             </p>
           </div>
         </div>
-        <div class="accordion-item">
-          <div class="title">
+        <div class="accordion__item">
+          <div class="accordion__title">
             <h4>Lorem ipsum dolor sit amet consectetur.</h4>
           </div>
-          <div class="description">
+          <div class="accordion__description">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti
               et cupiditate nulla, veniam natus ipsa eius qui, praesentium vel
@@ -82,11 +111,11 @@
             </p>
           </div>
         </div>
-        <div class="accordion-item">
-          <div class="title">
+        <div class="accordion__item">
+          <div class="accordion__title">
             <h4>Lorem ipsum dolor sit amet.</h4>
           </div>
-          <div class="description">
+          <div class="accordion__description">
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Culpa
               veritatis veniam esse voluptas? Veritatis assumenda omnis quam
@@ -94,14 +123,14 @@
             </p>
           </div>
         </div>
-        <div class="accordion-item">
-          <div class="title">
+        <div class="accordion__item">
+          <div class="accordion__title">
             <h4>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat,
               dolorum.
             </h4>
           </div>
-          <div class="description">
+          <div class="accordion__description">
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus
               tenetur cum necessitatibus laboriosam libero numquam id veritatis.
