save final project

--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
   </head>
   <body>
     <header class="header">
-      <div class="header__logo logo">
-        <a class="logo__link" href="">
-          <img
-            class="logo__image"
-            src="https://placehold.co/100x100"
-            alt="Logo"
-          />
-        </a>
-      </div>
+      <div class="header__wrapper">
+        <div class="header__logo logo">
+          <a class="logo__link" href="">
+            <img
+              class="logo__image"
+              src="https://images.unsplash.com/photo-1693854037975-b1434ea519dc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1887&q=80"
+              alt="Logo"
+            />
+          </a>
+        </div>
 
-      <button class="header__menu-toggle">menu toggle</button>
+        <button class="header__menu-toggle">Menu toggle</button>
+      </div>
 
       <nav class="header__nav nav">
         <ul class="nav__list">
