--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="main">
       <div class="accordion">
         <div class="accordion__item">
           <div class="accordion__title">
